# llm-maze-tester

./: .gitignore  README.md  chat_history.json  exec_log.txt  experiment_config.yaml  experiments.md  flake.nix  justfile  main.py  maze.py  maze_solver.py  maze_test.py  model.py  notes.md  pyproject.toml  run.sh  start_vpn.sh  test_run.yaml  todo.md
maze_solver/: pyproject.toml
maze_solver/src/: chat_history.py  chat_main.py  experiment.py  experiment_test.py  filter_test.py  generate_main.py  log.py  main.py  maze_test.py  model_test.py  move.py  ollama_leakege_test.py  prompt_example.py  prompt_test.py  prompt_token_test.py  render_main.py  run.py  run_test.py  save_run.py  solution_test.py  solve_test.py  solver.py  stats.py  stats_main.py  test_main.py  util.py  visualize.ipynb  visualizer.py  visualizer_test.ipynb
maze_solver/src/chat/: __init__.py  config.py  file.py
maze_solver/src/error/: depencency.py  generation.py  maze_solver.py  model.py
maze_solver/src/experiment/: __init__.py  config.py  log.py  run.py  utils.py
maze_solver/src/generate/: __init__.py  colored_example.py  colored_example_less.py  lateral_path.py  maze_exp_example.py  maze_exp_example_plus.py  prompt_example.py  prompt_example_flipped.py  prompt_example_plus.py  prompt_step_example.py  prompt_step_example_flipped.py  prompt_step_example_plus.py  selection_example.py  selection_example_flipped.py  sight_depth.py  sight_depth_flipped.py  task_example.py
maze_solver/src/llm/: model.py  phony_model.py  server.py
maze_solver/src/maze/: __init__.py  colored_cell.py  dataset.py  (+4 more)
(+816 files in other folders)
