[project]
name = "llm-maze-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docopt-ng>=0.9.0",
    "jupyterlab>=4.4.2",
    "maze-dataset>=1.3.2",
    "num2words>=0.5.14",
    "ollama>=0.6.1",
    "requests>=2.32.3",
    "rich>=14.1.0",
    "yaspin>=3.4.0",
]
